--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -426,8 +426,11 @@
        :custom ((default-input-method . "japanese-skk")
                 (skk-byte-compile-init-file . t))
        :init
-       (setq skk-user-directory (concat user-emacs-directory "ddskk.d"))
-       (setq skk-init-file (concat user-emacs-directory "ddskk.d/init.el"))
+       (setq skk-user-directory (expand-file-name "ddskk.d" user-emacs-directory))
+       (setq skk-init-file (expand-file-name "init.el" skk-user-directory ))
+       (when (file-directory-p my:d:nextcloud)
+         (setq skk-jisyo (cons (expand-file-name "personal_config/ddskk/skk-jisyo.utf8" my:d:nextcloud) 'utf-8))
+         )
        (setq viper-mode nil)
        :hook ((lisp-interaction-mode-hook . (lambda()
                                               (progn (eval-expression (skk-mode) nil)
