--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -19,6 +19,9 @@
        (unless (package-installed-p 'leaf)
          (package-refresh-contents)
          (package-install 'leaf))
+       (unless (package-installed-p 'use-package)
+         (package-refresh-contents)
+         (package-install 'use-package))
 
        (leaf leaf-keywords
          :ensure t
@@ -108,7 +111,8 @@
               ("C-c l" . toggle-truncate-lines)
               ("C-x |" . split-window-right)
               ("C-x -" . split-window-below)
-              ("C-x x" . delete-window)))
+              ("C-x x" . delete-window)
+              ("C-j"   . skk-kakutei)))
    #+end_src
 ** lisp
    #+begin_src emacs-lisp
@@ -759,6 +763,38 @@
                       (lsp-mode-map ("C-c s" . lsp-ui-sideline-mode)
                                     ("C-c d" . lsp-ui-doc-mode)))
                :hook ((lsp-mode-hook . lsp-ui-mode))))
+   #+end_src
+** mu4e
+   #+begin_src emacs-lisp
+     (use-package mu4e
+       :if (and (executable-find "mu") (file-directory-p my:d:nextcloud) (eq system-type 'gnu/linux))
+       :load-path  "/usr/share/emacs/site-lisp/mu4e/"
+       :demand t
+       :bind (:map mu4e-minibuffer-search-query-map
+              ("C-j" . skk-kakutei))
+       :config
+       (setq mu4e-headers-auto-update t)
+       (setq mu4e-headers-skip-duplicates t)
+       (setq mu4e-headers-sort-field :date)
+       (setq mu4e-index-cleanup t)
+       (setq mu4e-update-interval 300)
+       (setq mu4e-attachment-dir "~/Downloads")
+       (setq mu4e-change-filenames-when-moving t)
+       (setq mu4e-confirm-quit nil)
+       (setq mu4e-headers-visible-lines 20)
+       (setq mu4e-headers-show-threads nil)
+       (setq mu4e-hide-index-messages t)
+       (setq message-citation-line-format "%N @ %Y-%m-%d %H:%M :\n")
+       ;; M-x find-function RET message-citation-line-format for docs:
+       (setq message-citation-line-function 'message-insert-formatted-citation-line)
+       (setq mu4e-headers-include-related nil)
+       (setq mu4e-headers-show-threads nil)
+                                             ; https://github.com/djcb/mu/issues/1136#issuecomment-1229005006
+       (setf (plist-get (alist-get 'trash mu4e-marks) :action)
+             (lambda (docid msg target)
+               (mu4e--server-move docid (mu4e--mark-check-target target) "-N"))) ; Instead of "+T-N"
+       (load (expand-file-name "personal_config/emacs_mail/config.el" my:d:nextcloud)) ; mail server config
+       )
    #+end_src
 ** grammarly
    #+begin_src emacs-lisp
