--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -770,9 +770,11 @@
        :if (and (executable-find "mu") (file-directory-p my:d:nextcloud) (eq system-type 'gnu/linux))
        :load-path  "/usr/share/emacs/site-lisp/mu4e/"
        :demand t
-       :bind (:map mu4e-minibuffer-search-query-map
+       :bind (("C-c m" . mu4e)
+              :map mu4e-minibuffer-search-query-map
                    ("C-j" . skk-kakutei))
        :config
+       (setq mu4e-context-policy 'pick-first)
        (setq mu4e-headers-auto-update t)
        (setq mu4e-headers-skip-duplicates t)
        (setq mu4e-headers-sort-field :date)
