--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1195,6 +1195,14 @@
          :ensure t))
    #+end_src
 * misc-tools
+** atomic-chrome
+   #+begin_src emacs-lisp
+     (use-package atomic-chrome
+       :ensure t
+       :config
+       (atomic-chrome-start-server)
+       )
+   #+end_src
 ** git
    #+begin_src emacs-lisp
      (leaf *git-tools
