--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1199,6 +1199,7 @@
    #+begin_src emacs-lisp
      (use-package atomic-chrome
        :ensure t
+       :if (display-graphic-p)
        :config
        (atomic-chrome-start-server)
        )
