--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -246,7 +246,7 @@
      (when (display-graphic-p)
        (if (eq system-type 'darwin)
            (add-to-list 'default-frame-alist '(font . "Cica-22"))
-         (add-to-list 'default-frame-alist '(font . "PlemolJP Console NFJ 14"))))
+         (add-to-list 'default-frame-alist '(font . "Cica-16"))))
    #+end_src
 ** Highlight-indent-gide
    #+begin_src emacs-lisp
@@ -493,51 +493,51 @@
     #+end_src
 *** corfu
     #+begin_src emacs-lisp
-      (use-package corfu-terminal
-        :ensure t
-        :if (not (display-graphic-p))
-        :config
-        (corfu-terminal-mode +1))
-      (use-package corfu
-        :ensure t
-        :custom ((corfu-auto t)
-                 (corfu-auto-prefix 1)
-                 (corfu-auto-delay 0)
-                 (corfu-cycle t)
-                 (tab-always-indent 'complete))
-        :init
-        (global-corfu-mode))
+      ;; (use-package corfu-terminal
+      ;;   :ensure t
+      ;;   :disalbed
+      ;;   :if (not (display-graphic-p))
+      ;;   :config
+      ;;   (corfu-terminal-mode +1))
+      ;; (use-package corfu
+      ;;   :ensure t
+      ;;   :disabled
+      ;;   :custom ((corfu-auto t)
+      ;;            (corfu-auto-prefix 1)
+      ;;            (corfu-auto-delay 0)
+      ;;            (corfu-cycle t)
+      ;;            (tab-always-indent 'complete))
+      ;;   :init
+      ;;   (global-corfu-mode))
 
-      (use-package cape
-        :ensure t
-        :init
-        ;; Add `completion-at-point-functions', used by `completion-at-point'.
-        (add-to-list 'completion-at-point-functions (cape-company-to-capf #'company-yasnippet) t)
-        (add-to-list 'completion-at-point-functions #'cape-dabbrev)
-        (add-to-list 'completion-at-point-functions #'cape-file)
-        ;;(add-to-list 'completion-at-point-functions #'cape-history)
-        (add-to-list 'completion-at-point-functions #'cape-keyword)
-        ;; (add-to-list 'completion-at-point-functions #'cape-tex)
-        ;;(add-to-list 'completion-at-point-functions #'cape-sgml)
-        ;;(add-to-list 'completion-at-point-functions #'cape-rfc1345)
-        ;;(add-to-list 'completion-at-point-functions #'cape-abbrev)
-        ;;(add-to-list 'completion-at-point-functions #'cape-ispell)
-        ;;(add-to-list 'completion-at-point-functions #'cape-dict)
-        ;;(add-to-list 'completion-at-point-functions #'cape-symbol)
-        ;;(add-to-list 'completion-at-point-functions #'cape-line)
-        )
+      ;; (use-package cape
+      ;;   :ensure t
+      ;;   :init
+      ;;   ;; Add `completion-at-point-functions', used by `completion-at-point'.
+      ;;   (add-to-list 'completion-at-point-functions (cape-company-to-capf #'company-yasnippet) t)
+      ;;   (add-to-list 'completion-at-point-functions #'cape-dabbrev)
+      ;;   (add-to-list 'completion-at-point-functions #'cape-file)
+      ;;   ;;(add-to-list 'completion-at-point-functions #'cape-history)
+      ;;   (add-to-list 'completion-at-point-functions #'cape-keyword)
+      ;;   ;; (add-to-list 'completion-at-point-functions #'cape-tex)
+      ;;   ;;(add-to-list 'completion-at-point-functions #'cape-sgml)
+      ;;   ;;(add-to-list 'completion-at-point-functions #'cape-rfc1345)
+      ;;   ;;(add-to-list 'completion-at-point-functions #'cape-abbrev)
+      ;;   ;;(add-to-list 'completion-at-point-functions #'cape-ispell)
+      ;;   ;;(add-to-list 'completion-at-point-functions #'cape-dict)
+      ;;   ;;(add-to-list 'completion-at-point-functions #'cape-symbol)
+      ;;   ;;(add-to-list 'completion-at-point-functions #'cape-line)
+      ;;   )
     #+end_src
-
-
 *** company
     #+begin_src emacs-lisp
       (use-package company
         :ensure t
-        :disabled
         :delight company-mode
         :bind (:map company-active-map
                     ("M-n" . nil)
                     ("M-p" . nil)
+                    ("C-h" . nil)
                     ("C-s" . company-filter-candidates)
                     ("C-n" . company-select-next)
                     ("C-p" . company-select-previous)
@@ -572,14 +572,15 @@
         :hook ((company-mode-hook . company-box-mode))
         :custom
         (company-box-icons-alist 'company-box-icons-all-the-icons))
-      ;; (use-package company-quickhelp
-      ;;   :if (display-graphic-p)
-      ;;   :ensure t
-      ;;   :custom
-      ;;   (company-quickhelp-delay 0.8)
-      ;;   (company-quickhelp-mode t)
-      ;;   :bind (company-active-map ("M-h" . company-quickhelp-manual-begin))
-      ;;   :hook ((company-mode-hook . company-quickhelp-mode)))
+      (use-package company-quickhelp
+        :if (display-graphic-p)
+        :ensure t
+        :custom
+        (company-quickhelp-delay 0.8)
+        (company-quickhelp-mode t)
+        :bind (:map company-active-map
+                    ("M-h" . company-quickhelp-manual-begin))
+        :hook ((company-mode-hook . company-quickhelp-mode)))
       ;; (use-package company-math
       ;;   :ensure t
       ;;   :defvar (company-backends)
@@ -606,17 +607,17 @@
                     ("C-c y v" . yas-visit-snippet-file)
                     ("C-c y l" . yas-describe-tables)
                     ("C-c y g" . yas-reload-all))
-        ;; :config
-        ;; (defvar company-mode/enable-yas t
-        ;;   "Enable yasnippet for all backends.")
-        ;; (defun company-mode/backend-with-yas (backend)
-        ;;   (if (or (not company-mode/enable-yas)
-        ;;           (and (listp backend)
-        ;;                (member 'company-yasnippet backend))) backend (append (if (consp backend) backend (list backend))
-        ;;           '(:with company-yasnippet ))))
-        ;; (defun set-yas-as-company-backend ()
-        ;;   (setq company-backends (mapcar #'company-mode/backend-with-yas company-backends)))
-        ;; :hook ((company-mode-hook . set-yas-as-company-backend))
+        :config
+        (defvar company-mode/enable-yas t
+          "Enable yasnippet for all backends.")
+        (defun company-mode/backend-with-yas (backend)
+          (if (or (not company-mode/enable-yas)
+                  (and (listp backend)
+                       (member 'company-yasnippet backend))) backend (append (if (consp backend) backend (list backend))
+                  '(:with company-yasnippet ))))
+        (defun set-yas-as-company-backend ()
+          (setq company-backends (mapcar #'company-mode/backend-with-yas company-backends)))
+        :hook ((company-mode-hook . set-yas-as-company-backend))
         )
 
       (use-package yasnippet-snippets :ensure t)
@@ -687,6 +688,7 @@
    #+begin_src emacs-lisp
      (use-package lsp-mode
        :ensure t
+       :disabled
        :commands (lsp lsp-deferred)
        :config
        :custom
@@ -735,31 +737,25 @@
    #+begin_src emacs-lisp
      (use-package consult-lsp
        :ensure t
+       :disabled
        :bind (:map lsp-mode-map
                    ([remap xref-apropos] . consult-lsp-symbols)))
    #+end_src
 ** eglot
    #+begin_src emacs-lisp
-     ;; (use-package eglot
-     ;;   :ensure t
-     ;;   :config
-     ;;   (add-hook 'python-mode-hook 'eglot-ensure)
-     ;;   )
+     (use-package eglot
+       :ensure t
+       :config
+       (add-hook 'python-mode-hook 'eglot-ensure)
+       )
    #+end_src
 ** flymake
    #+begin_src emacs-lisp
-     ;; (use-package flymake-diagnostic-at-point
-     ;;   :ensure t
-     ;;   :after flymake
-     ;;   :config
-     ;;   (add-hook 'flymake-mode-hook #'flymake-diagnostic-at-point-mode))
-     ;; (use-package poetry
-     ;;   :ensure t
-     ;;   :config
-     ;;   ;; Checks for the correct virtualenv. Better strategy IMO because the default
-     ;;   ;; one is quite slow.
-     ;;   (setq poetry-tracking-strategy 'switch-buffer)
-     ;;   :hook ((python-mode-hook . poetry-tracking-mode)))
+     (use-package flymake-diagnostic-at-point
+       :ensure t
+       :after flymake
+       :config
+       (add-hook 'flymake-mode-hook #'flymake-diagnostic-at-point-mode))
    #+end_src
 * Programing Langs
 ** General
@@ -836,20 +832,18 @@
     #+begin_src emacs-lisp
       (use-package python
         :custom (python-indent-guess-indent-offset-verbose . nil))
-
-      (use-package lsp-pyright
-        :ensure t
-        ;; :init (setq lsp-pyright-typechecking-mode "strict")
-        :hook (python-mode-hook . (lambda ()
-                                    (require 'lsp-pyright)
-                                    (lsp-deferred))))
+      ;; (use-package lsp-pyright
+      ;;   :ensure t
+      ;;   ;; :init (setq lsp-pyright-typechecking-mode "strict")
+      ;;   :hook (python-mode-hook . (lambda ()
+      ;;                               (require 'lsp-pyright)
+      ;;                               (lsp-deferred))))
       (use-package py-isort
         :ensure t
         :hook (python-mode-hook . (lambda ()
                                     (add-hook 'before-save-hook 'py-isort-before-save)))
         :custom
         (py-isort-options '("--profile=black")))
-
       (use-package blacken
         :ensure t
         :hook (python-mode-hook .  blacken-mode)
@@ -858,6 +852,13 @@
         ;; (blacken-skip-string-normalization t)
         )
 
+      (use-package poetry
+        :ensure t
+        :config
+        ;; Checks for the correct virtualenv. Better strategy IMO because the default
+        ;; one is quite slow.
+        (setq poetry-tracking-strategy 'switch-buffer)
+        :hook ((python-mode-hook . poetry-tracking-mode)))
     #+end_src
 *** web
 **** web-mode
@@ -1204,6 +1205,7 @@
       ;; Disable version control on tramp buffers to avoid freezes.
       (setq tramp-remote-path '(tramp-default-remote-path
                                 "~/.local/bin/"))
+      (add-to-list 'tramp-remote-path 'tramp-own-remote-path)
       (setq vc-ignore-dir-regexp
             (format "\\(%s\\)\\|\\(%s\\)"
                     vc-ignore-dir-regexp
@@ -1219,15 +1221,7 @@
       (customize-set-variable 'tramp-ssh-controlmaster-options
                               (concat
                                "-o ControlPath=/tmp/ssh-tramp-%%r@%%h:%%p "
-                               "-o ControlMaster=auto -o ControlPersist=yes"))
-      (with-eval-after-load 'lsp-mode
-        (lsp-register-client
-         (make-lsp-client :new-connection (lsp-tramp-connection "pyright")
-                          :major-modes '(python-mode)
-                          :remote? t
-                          :server-id 'pyright-remote))
-        )
-      )
+                               "-o ControlMaster=auto -o ControlPersist=yes")))
   #+end_src
 * Mail
 ** mu4e
